# student0

.cursor/: sandbox.json
hw-http/: httpserver.c
hw-intro/: .gitignore  Makefile  i386-gdb-map.sh  map.c  printer.c
hw-intro/words/: Makefile  words.txt
hw-kvsrv/: Makefile
hw-kvsrv-rs/: .gitignore  Cargo.toml
hw-kvsrv-rs/.claude/: settings.json
hw-kvsrv-rs/.cursor/: hooks.json
hw-kvsrv-rs/.cursor/hooks/: cs162-pretool.sh
hw-kvsrv-rs/lib/: Cargo.toml
hw-kvsrv-rs/lib/.internal/: pool.rs
hw-kvsrv-rs/lib/src/: client.rs  lib.rs  persister.rs  rpc.rs
hw-kvsrv-rs/src/: lib.rs  lock.rs
hw-kvsrv-rs/src/kv_raft/: client.rs  mod.rs  raft.rs  rsm.rs
hw-kvsrv-rs/src/kv_single/: client.rs  mod.rs  server.rs
hw-kvsrv-rs/tests/: kvraft_test.rs  kvsrv_test.rs  raft_test.rs  student_test.rs
hw-kvsrv-rs/tests/common/: cluster.rs  kv.rs  lock.rs  mod.rs  network_proxy.rs  raft.rs
hw-kvsrv/lib/: hash.c  hash.h  kv_types.c  kv_types.h  list.c  list.h  persister.c  persister.h  rpc.c  rpc.h
hw-kvsrv/src/: lock.c  lock.h
hw-kvsrv/tests/: kv_single_test_helpers.c  kv_test_helpers.c  kv_test_helpers.h  kvraft_test.c  kvraft_test_helpers.c  kvsrv_test.c  lock_test_helpers.c  lock_test_helpers.h  network_proxy.c  network_proxy.h  raft_test.c  raft_test_helpers.c  raft_test_helpers.h  raft_test_server.c  test_common.c  test_common.h
hw-list/: .gitignore  Makefile  word_count_l.c  word_count_p.c
hw-map-reduce/: Makefile
hw-map-reduce-rs/src/: client.rs
hw-map-reduce/coordinator/: coordinator.c
hw-shell/: Makefile  test.sh
lab-rpc/: Makefile  server.c
(+20 files in other folders)
