[workspace]
members = ["lib"]
resolver = "2"

[package]
name = "kvsrv"
edition = "2024"

[dependencies]
kvsrv-lib = { path = "lib" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nix = { version = "0.30", features = ["signal", "process"] }
axum = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
